<resources>
    <string name="app_name">HealthMonitor</string>
    <string name="bluetooth_device_name">HC-06</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>
    <string name="warning">Warning</string>
    <string name="message_enable_bluetooth">Please, enable bluetooth</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="message_connect_device">Please, connect device</string>
    <string name="connect">Connect</string>
    <string name="error">Error</string>
    <string name="error_cardio_monitoring_unavailable">Cardio monitoring is unavailable</string>
    <string name="ok">OK</string>
    <string name="general_info">General info</string>
    <string name="cardio_monitor">Cardio monitor</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="complaints">Complaints</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="exit">Exit</string>
    <string name="auth_welcome">Welcome\nBack, %s!</string>
    <string name="sign_in_or_sign_up">"Sign In / Sign Up"</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="add">Add</string>
    <string name="add_new_complaint">Add new complaint</string>
    <string name="heart">Heart</string>
    <string name="bps">bps</string>
    <string name="bedtine">Today: %d hour(s)</string>
    <string name="dump_text">Dump text</string>

</resources>
