<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_general"
            android:icon="@drawable/ic_assignment_ind_black_36dp"
            android:title="@string/general_info" />
        <item
            android:id="@+id/drawer_cardio_monitor"
            android:icon="@drawable/ic_favorite_black_36dp"
            android:title="@string/cardio_monitor" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
