<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/side_margin"
    android:layout_marginEnd="@dimen/side_margin">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/fragment_title_style"
        android:text="Join us"/>


    <LinearLayout
        android:id="@+id/holder_input_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/white"
            android:hint="@string/first_name">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/white"/>


        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/holder_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true"
            android:hint="@string/last_name"
            android:textColorHint="@color/white">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="@color/white"/>


        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_accent_button"
        android:textColor="@color/white"
        android:text="@string/sign_up"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/content_bottom_margin"
        android:textSize="14sp" />




</RelativeLayout>